--- a/rn-app/package.json
+++ b/rn-app/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
+    "expo-linking": "~3.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
